--- a/templates/delivery/index.tmpl
+++ b/templates/delivery/index.tmpl
@@ -27,11 +27,32 @@
             , cols: [[
                 { field: "id", title: "番号", width: 105 }
                 , { field: "name", title: "管理名称" }
-                , { field: "", title: "送信済/全数" }
+                , {
+                    field: "", title: "送信済/全数", templet: function (d) {
+                        let mail_delivery_logs = 0;
+                        if (d.mail_delivery_logs) {
+                            mail_delivery_logs = d.mail_delivery_logs.length;
+                        }
+                        return mail_delivery_logs;
+                    }
+                }
                 , { field: "", title: "対象者リスト" }
                 , { field: "send_at", title: "送信日時" }
                 , { field: "send_completed_at", title: "送信完了日時" }
-                , { field: "status", title: "実施ステータス" }
+                , {
+                    field: "status", title: "実施ステータス", templet: function (d) {
+                        switch (d.status) {
+                            case 1:
+                                return '<span class="layui-badge-dot layui-bg-green"></span> ' + "配信完了"
+                                break;
+                            case 0:
+                                return '<span class="layui-badge-dot"></span> ' + "未実施"
+                                break;
+                            default:
+                                break;
+                        }
+                    }
+                }
             ]]
             , page: true
         });
